--- a/responsive_web_design/project01/index.html
+++ b/responsive_web_design/project01/index.html
@@ -22,7 +22,19 @@
                     and will allow you to associate an image with a caption.-->
                 <figure>
                     <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
-                    <figcaption>Cats love lasagna.</figcaption>
+                    <figcaption>Cats <em>love</em> lasagna.</figcaption>
+                </figure>
+                <h3>Top 3 things cats hate:</h3>
+                <!--The code for an ordered list (ol) is similar to an unordered list,
+                     but list items in an ordered list are numbered when displayed.-->
+                <ol>
+                    <li>flea treatment</li>
+                    <li>thunder</li>
+                    <li>other cats</li>
+                </ol>
+                <figure>
+                    <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field">
+                    <figcaption>Cats hate other cats.</figcaption>
                 </figure>
             </section>
         </main>
